--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "typeconfig",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Config loader for Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/bpatrik/typeconfig#readme",
   "devDependencies": {
-    "@types/node": "^7.0.5",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.13",
     "@types/optimist": "0.0.29",
-    "typescript": "^2.2.1"
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-typescript": "^3.0.4",
+    "phantomjs": "^2.1.7",
+    "typescript": "^2.4.1"
   },
   "dependencies": {
     "optimist": "^0.6.1"
