--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "sourceMap": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules"
-  ],
-  "typeRoots": [
-    "node_modules/@types"
   ]
 }
