project style update, packages update

--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
     "Typescript",
     "config"
   ],
-  "author": "Patrik Braun",
+  "author": "Patrik J. Braun",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bpatrik/typeconfig/issues"
   },
   "homepage": "https://github.com/bpatrik/typeconfig#readme",
   "devDependencies": {
-    "@types/jasmine": "^3.3.0",
-    "@types/node": "^10.12.11",
+    "@types/jasmine": "3.3.5",
+    "@types/node": "10.12.18",
     "@types/optimist": "0.0.29",
-    "jasmine-core": "^3.3.0",
-    "karma": "^3.1.3",
-    "karma-jasmine": "^2.0.1",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-typescript": "^3.0.13",
-    "phantomjs": "^2.1.7",
-    "typescript": "^3.2.1"
+    "jasmine-core": "3.3.0",
+    "karma": "3.1.4",
+    "tslint": "5.11.0",
+    "tslint-consistent-codestyle": "1.13.3",
+    "karma-jasmine": "2.0.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-typescript": "3.0.13",
+    "typescript": "3.2.2"
   },
   "dependencies": {
-    "optimist": "^0.6.1"
+    "optimist": "0.6.1"
   }
 }
