--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typeconfig",
-  "version": "1.0.8c",
+  "version": "1.0.9",
   "description": "Config loader for Typescript",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/bpatrik/typeconfig#readme",
   "devDependencies": {
     "@types/jasmine": "3.5.0",
-    "@types/node": "12.12.17",
+    "@types/node": "13.1.2",
     "@types/optimist": "0.0.29",
     "jasmine-core": "3.5.0",
     "karma": "4.4.1",
@@ -31,7 +31,7 @@
     "karma-jasmine": "2.0.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-typescript": "4.1.1",
-    "typescript": "3.7.3"
+    "typescript": "3.7.4"
   },
   "dependencies": {
     "optimist": "0.6.1"
