--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
+    "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "sourceMap": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
