--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
   },
   "homepage": "https://github.com/bpatrik/typeconfig#readme",
   "devDependencies": {
+    "@types/chai": "4.2.7",
+    "@types/chai-as-promised": "7.1.2",
     "@types/mocha": "5.2.7",
-    "@types/node": "13.1.2",
+    "@types/node": "13.1.6",
     "@types/optimist": "0.0.29",
-    "@types/chai": "4.2.6",
-    "jasmine-core": "3.5.0",
-    "karma": "4.4.1",
-    "tslint": "5.20.1",
-    "mocha": "6.2.2",
+    "@types/rimraf": "2.0.3",
     "chai": "4.2.0",
     "coveralls": "3.0.9",
+    "jasmine-core": "3.5.0",
+    "karma": "4.4.1",
+    "mocha": "7.0.0",
     "nyc": "15.0.0",
+    "rimraf": "3.0.0",
+    "tslint": "5.20.1",
+    "chai-as-promised": "7.1.1",
     "tslint-consistent-codestyle": "1.16.0",
     "typescript": "3.7.4"
   },
