--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,12 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2015",
+    "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
   },
   "exclude": [
     "node_modules",
