--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,28 +15,27 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [ 18.x,20.x,21.x ]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
 
-    - name: npm install and build
-      run: |
-        npm ci
-        npm run build
+      - name: npm install and build
+        run: |
+          npm ci
+          npm run build
 
-    - name: lint
-      run: |
-        npm run lint
-    - name: test
-      run: |
-        npm test
-        npm run coverage
-      env:
-        CI: true
+      - name: lint
+        run: |
+          npm run lint
+      - name: test
+        run: |
+          npm test
+        env:
+          CI: true
 
